      #418166)
    - added Vcs-{Svn,Browser} fields
    - added Homepage field
  * debian/copyright
    - clear separation of author, copyright and license notices
  * debian/menu
    - section updated to "Applications/System/Administration"
  * debian/rules
    - removed export DH_COMPAT
    - now using binary-indep since it's and arch: all package
  * debian/compat
    - added with value = 5
  * reportbug.conf.5, po4a/add_fr/{reportbug.add,querybts.add}
    - escaped minus sign to be an hyphen
  * reportbug.ja.1
    - fixed some formatting errors
  * debianbts.py
    - added 'nm.debian.org' pseudo-package, Giridhar's patch (Closes: #478414)
  * reportbug.py
    - uses dpkg when dlocate can't find the package's file (Closes: #429824)

 -- Sandro Tosi <matrixhasu@gmail.com>  Sat, 03 May 2008 22:21:39 +0200

reportbug (3.39-0.1) unstable; urgency=low

  * Non-maintainer upload
  * Add templates for ftp.debian.org removal (RM) requests (Closes: #459333)
  * Add a -P option to allow setting pseudo-headers, useful for setting
    usertags.  Thanks Lucas Nussbaum <lucas@lucas-nussbaum.net> for the patch
    (Closes: #445144)
  * Raise an error and indicate to the user in case of any network errors
    (Closes: #302103)
  * CC: secure-testing-team@lists.alioth.debian.org when a security issue is
    reported (Closes: #448874)
  * Indicate that in mode > standard incoming and NEW are also checked with
    --check-available (Closes: #450523, #447380)

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sat, 22 Mar 2008 15:33:23 +0530

reportbug (3.39) unstable; urgency=low

  * Add man page for reportbug.conf, thanks to Y Giridhar Appaji Nag.
    (Closes: #437473)
  * Cope (hopefully) with non-ASCII realnames in .reportbugrc when
    reportbug --help is invoked.  (Closes: #434011, #432505)
  * Get rid of duplicate listings for uninstalled packages due to multiple
    appearances in the available file.  (Closes: #424433, 427660)
