@@ -16,6 +16,8 @@ reportbug (3.40) UNRELEASED; urgency=low
   * debian/rules
     - removed export DH_COMPAT
     - now using binary-indep since it's and arch: all package
+    - doesn't remove 'test' dir anymore, since now it's used for unittests
+      files
   * debian/compat
     - added with value = 5
   * reportbug.conf.5, po4a/add_fr/{reportbug.add,querybts.add}
@@ -24,10 +26,17 @@ reportbug (3.40) UNRELEASED; urgency=low
     - fixed some formatting errors
   * debianbts.py
     - added 'nm.debian.org' pseudo-package, Giridhar's patch (Closes: #478414)
+    - removed Gnome BTS from bugs forward; Giridhar's patch (Closes: #439351)
+    - removed [cruft-report] option from ftp.debian.org RM template;
+      Giridhar's patch (Closes: #474970)
   * reportbug.py
-    - uses dpkg when dlocate can't find the package's file (Closes: #429824)
+    - uses dpkg when dlocate can't find the package's file (Closes: #429824,
+      #422369, #322983, #408834)
+  * reportbug.el
+    - applied patch to let Gnus work; thanks to Håkon Stordahl for it (Closes:
+      #227153)
 
- -- Sandro Tosi <matrixhasu@gmail.com>  Sat, 03 May 2008 22:21:39 +0200
+ -- Sandro Tosi <matrixhasu@gmail.com>  Mon, 05 May 2008 00:29:17 +0200
 
 reportbug (3.39-0.1) unstable; urgency=low
 
